--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>I am Component</h3>
+            <hr>
+            <app-servers>
+            </app-servers>
+        </div>
+    </div>
+</div>
