feat: string interpolation and callin the method inside the curli braces

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,4 @@
-<p>Server compoennt</p>
+<p>Server with ID {{serverId}} is {{serverStatus}}</p>
+
+<!-- Call a method -->
+<p>Server with ID {{serverId}} is {{getServerStatus()}}</p>
