--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -4,7 +4,7 @@
 <!-- two way data binding -->
 <input type="text" class="form-control" [(ngModel)]="serverName">
 
-<p>{{serverName}}</p>
+<!-- <p>{{serverName}}</p> -->
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">
     Add Server
 </button>
