--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,4 +1,4 @@
-<p>Server with ID {{serverId}} is {{serverStatus}}</p>
+<p [ngStyle]="{backgroundColor:getColor()}">Server with ID {{serverId}} is {{serverStatus}}</p>
 
 <!-- Call a method -->
 <p>Server with ID {{serverId}} is {{getServerStatus()}}</p>
