--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,8 +17,8 @@
                 </li>
 
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="nav-item dropdown navbar-right">
+            <ul class="nav navbar-nav">
+                <li class="nav-item dropdown" customdropdown>
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Manage
