--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list (recipeWasSelected)="selectedRecipe=$event"></app-recipe-list>
+        <app-recipe-list></app-recipe-list>
         <div class="btn btn-primary">Test</div>
     </div>
     <div class="col-md-7">
