--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,10 +10,10 @@
             (window:resize)="collapsed=true">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/recipes">Recipes</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/recipes">Recipes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/shopping-list">Shopping List</a>
                 </li>
 
             </ul>
