--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,14 +19,14 @@
             </ul>
             <ul class="nav navbar-nav">
                 <li class="nav-item dropdown" customdropdown>
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdownMenuLink"
+                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Manage
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" style="cursor: pointer;">Save Data</a></li>
+                        <li><a class="dropdown-item" style="cursor: pointer;">Fetch Data</a></li>
+
                     </ul>
                 </li>
             </ul>
