--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,8 +3,8 @@
         <app-shopping-edit></app-shopping-edit>
         <hr>
         <ul class="list-group">
-            <a href="" class="list-group-item" style="cursor: pointer;"
-                *ngFor="let ingredient of ingredients">{{ingredient.name}}({{ingredient.amount}})</a>
+            <a href="" class="list-group-item" style="cursor: pointer;" (click)="onEditItem()"
+                *ngFor="let ingredient of ingredients; let i=index">{{ingredient.name}}({{ingredient.amount}})</a>
         </ul>
     </div>
 </div>
