--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -19,13 +19,13 @@
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="imagepath">Image URL</label>
-                        <input type="text" id="imagePath" class="form-control" formControlName="imagePath">
+                        <input type="text" id="imagePath" class="form-control" formControlName="imagePath" #imagePath>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <img src="" class="img-responsive" alt="">
+                    <img [src]="imagePath.value" class="img-responsive" alt="">
                 </div>
             </div>
             <div class="row">
@@ -47,7 +47,7 @@
                             <input type="number" class="form-control" formControlName="amount">
                         </div>
                         <div class="col-md-2">
-                            <button class="btn btn-danger">X</button>
+                            <button class="btn btn-danger" type="button" (click)="onDeleteIngredient(i)">X</button>
                         </div>
                     </div>
                     <div class="row">
