--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,7 +25,8 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
-                        <li><a class="dropdown-item" style="cursor: pointer;">Fetch Data</a></li>
+                        <li><a class="dropdown-item" style="cursor: pointer;" (click)="onFetchRecipes()">Fetch Data</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
