--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -11,12 +11,13 @@
             </div>
 
             <div class="col-md-12 mb-3">
-                <button class="btn btn-primary">Sign Up</button>
+                <button class="btn btn-primary" type="submit">{{isLoginMode?'Login':'Sign Up'}}</button>
             </div>
             <div class="col-md-12">
-                <button class="btn btn-primary">Switch to Login</button>
+                <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
+                    Switch to {{isLoginMode?'Sign Up':'Login'}}
+                </button>
             </div>
-
         </form>
     </div>
 </div>
