--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,17 +1,18 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form [formGroup]="authForm">
             <div class="form-group">
                 <label for="email">E-mail</label>
-                <input type="text" id="email" class="form-control">
+                <input type="text" id="email" formControlName="email" class="form-control" required>
             </div>
             <div class="form-group mb-3">
                 <label for="password">Password</label>
-                <input type="password" id="password" class="form-control">
+                <input type="password" id="password" formControlName="password" class="form-control" minlength="6">
             </div>
 
             <div class="col-md-12 mb-3">
-                <button class="btn btn-primary" type="submit">{{isLoginMode?'Login':'Sign Up'}}</button>
+                <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{isLoginMode?'Login':'Sign
+                    Up'}}</button>
             </div>
             <div class="col-md-12">
                 <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
